5.3
-----
- [*] Opening a product from order details now shows readonly product details of the same styles as in editable product details.
- [*] Opening a product variation from order details now shows readonly product variation details and this product variation does not appear in the Products tab anymore.
- [*] Enhancement: when not saving a product as "published", the in-progress modal now shows title and message like "saving your product" instead of "publishing your product".
- [*] In product and variation list, the stock quantity is not shown anymore when stock management is disabled.
- [*] Enhancement: when the user attempts to dismiss the product selector search modal while at least one product is selected for a grouped product's linked products, a discard changes action sheet is shown.
- [internal] [https://github.com/woocommerce/woocommerce-ios/pull/2883] Renamed a product database table (Attribute) to GenericAttribute. This adds a new database migration. 
- [internal] [https://github.com/woocommerce/woocommerce-ios/pull/2979] Refactored the text fields in the Manual Shipment Tracking page. 

 
5.2
-----
- [**] Products: now you can editing basic fields for non-core products (whose product type is not simple/external/variable/grouped) - images, name, description, readonly price, readonly inventory, tags, categories, short description, and product settings.
- [*] Enhancement: for variable products, the stock status is now shown in its variation list.
- [*] Sign In With Apple: if the Apple ID has been disconnected from the WordPress app (e.g. in Settings > Apple ID > Password & Security > Apps using Apple ID), the app is logged out on app launch or app switch.
- [*] Now from an Order Detail it's only possible to open a Product in read-only mode.
- [internal] #2881 Upgraded WPAuth from 1.24 to 1.26-beta.12. Regressions may happen in login flows.
- [internal] #2896 Configured the same user agent header for all the network requests made through the app.