@@ -1,5 +1,6 @@
 5.3
 -----
+- [**] In Settings > Experimental Features, a Products switch is now available for turning Products M4 features on and off (default off). Products M4 features: add a simple/grouped/external product with actions to publish or save as draft.
 - [*] Opening a product from order details now shows readonly product details of the same styles as in editable product details.
 - [*] Opening a product variation from order details now shows readonly product variation details and this product variation does not appear in the Products tab anymore.
 - [*] Enhancement: when not saving a product as "published", the in-progress modal now shows title and message like "saving your product" instead of "publishing your product".
